# hrf-universe-home-task

./: .env  README.md  config.py  docker-compose.yml  entrypoint.py  makefile  pyproject.toml
celery_config/: task.py
home_task/: cli.py  db.py  models.py
home_task/backend/: get_statistics.py
home_task/selectors/: constants.py  selector.py
home_task/tasks/: broker_tasks.py  tasks.py
home_task/transactions/: insert.py
infrastructure/: app.Dockerfile  celery_worker.Dockerfile
migrations/: env.py
migrations/versions/: 21f6a5adb97e_add_job_posting.py  2b713045e1a2_.py  3911b0cf0755_.py  55f1782163fc_add_standard_jobs.py  5f9f370fb3d9_create_hire_statistics_table.py  6ab0da78b291_.py  96379826d88c_.py  991ecb2bf269_load_data.py
tests/: test_async_task.py  test_celery_task.py  test_celery_worker.py  test_db_insert.py  test_db_session.py  test_task_async.py
