[tool.poetry]
name = "hrf-universe-home-task"
version = "0.1.0"
description = ""
authors = ["Dmytro Kostochko <dmytro.kostochko@hrforecast.de>"]
readme = "README.md"
packages = [{include = "hrf_universe_home_task"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.0"
sqlalchemy = { version = "<1.4.10", extras = ["asyncio"] }
alembic = "^1.10.2"
celery = "^5.5.2"
psycopg-binary = "^3.2.9"
python-dotenv = "^1.1.0"
isort = "^6.0.1"
black = "^25.1.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"